# ClawGate

./: .dockerignore  .env.example  .gitignore  .npmrc  LICENSE  README.md  README.zh-CN.md  architecture.md  docker-compose.prod.yml  docker-compose.team.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: docker.yml
docs/deployment/: single-node.md  team.md
docs/progress/: DONE.md  NEXT.md
proto/: intent.proto  router.proto
scripts/: run-e2e-test.sh  test-dag-e2e.sh  test-dag-mock.sh  test-dag-wave3.sh  test-helpers.ts  test-step1-yaml-config.mjs  test-step2-sqlite.mjs  test-step6-websocket.mjs  verify-dag-flow.ts
services/intent-python/: Dockerfile  L3_HYBRID_README.md  main.py  requirements.txt
services/intent-python/l2_semantic/: __init__.py
services/intent-python/l3_sentinel/: __init__.py  lr_classifier.py  rule_engine.py  train.py
services/intent-python/l4_feedback/: __init__.py
services/router-rust/: .dockerignore  Cargo.toml  Dockerfile
services/router-rust/src/: main.rs
services/router-rust/src/cache/: mod.rs
services/router-rust/src/circuit/: mod.rs
services/router-rust/src/rules/: mod.rs
